src/test/deca/context/invalid/homemade/override_method_as_field.deca
// Trying to redefine method as field

class A {
    int x;
    void y() {}
}

class B extends A {
    boolean y;
    int z() {return 4;}
}